# ChessCoordinateTraining

./: MyStats.json  README.md  chessboard.py  main.py  pyproject.toml  requirements.txt  setup.py
docs/: README.md  api_documentation.md
src/: __init__.py
src/core/: __init__.py  game_logic.py  stats.py
src/ui/: __init__.py  components.py
stats/: Training_Black.json
tests/: MoreStats.json  __init__.py  stats1.json  test.py  test_components.py  test_game_logic.py  test_integration.py  test_stats.json  test_stats.py
