[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-coordinates-trainer"
version = "0.2"
description = "An interactive chess coordinates training application"
readme = "docs/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Topic :: Games/Entertainment :: Board Games",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/chess-coordinates-trainer"
Documentation = "https://github.com/yourusername/chess-coordinates-trainer/docs"
Repository = "https://github.com/yourusername/chess-coordinates-trainer.git"

[project.scripts]
chess-trainer = "src.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["find:"]

[tool.setuptools.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'